<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".NextFruit">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="358dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/description"
                android:scaleType="fitXY"
                android:src="@drawable/orange">
            </ImageView>
        </FrameLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="18dp"
            android:textAlignment="center"
            android:textSize="20sp"
            android:text="@string/orange"
            android:textColor="#F44336"
            android:textStyle="bold"
            android:padding="8dp"
            >
        </TextView>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="18dp"
            android:padding="8dp"
            android:text="@string/orange_ciri"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:textStyle="bold">
        </TextView>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                tools:ignore="UselessParent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/shape"
                    android:textColor="@color/black">
                </TextView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/round"
                    android:textColor="@color/black">
                </TextView>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                tools:ignore="UselessParent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/latin_name"
                    android:textColor="@color/black">
                </TextView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/citrus_sinensis"
                    android:textColor="@color/black">
                </TextView>
            </TableRow>

            <Button
                android:id="@+id/btnHomeBack"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textAlignment="center"
                android:layout_marginTop="45dp"
                android:text="@string/ke_home"
                android:textColor="@color/white"
                >
            </Button>


            <Button
                android:id="@+id/btnConstraintApple"
                android:layout_width="357dp"
                android:layout_height="wrap_content"
                android:background="@color/purple_700"
                android:text="@string/constraint_apple"
                android:textAlignment="center"
                android:textColor="@color/white">
            </Button>
        </TableLayout>
    </LinearLayout>
</ScrollView>