<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.detail.DetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_image"
            android:layout_width="411dp"
            android:layout_height="262dp"
            android:contentDescription="@string/image_of_detail_fruits"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tv_detail_name"
            android:layout_width="111dp"
            android:layout_height="31dp"
            android:layout_marginTop="28dp"
            android:layout_marginEnd="132dp"
            android:text="@string/detail_name"
            android:textAlignment="center"
            android:textColor="#040000"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_image" />

        <TextView
            android:id="@+id/tv_article"
            android:layout_width="353dp"
            android:layout_height="191dp"
            android:layout_marginTop="32dp"
            android:text="@string/lorem_ipsum"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_detail_name"
            app:layout_constraintVertical_bias="0.074" />

        <Button
            android:id="@+id/action_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/material_dynamic_neutral40"
            android:layout_marginTop="36dp"
            android:layout_marginEnd="128dp"
            android:text="@string/share"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="@+id/tv_article"
            app:layout_constraintTop_toBottomOf="@+id/tv_article" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>